--- a/styles/globals/_pagination.scss
+++ b/styles/globals/_pagination.scss
@@ -10,7 +10,7 @@
       border-radius: 2px;
       font-weight: bold;
       font-size: 13px;
-      color: $slate;
+      color: $primary-400;
       display: flex;
       height: 30px;
       border: none;
