--- a/styles/globals/form/_normal.scss
+++ b/styles/globals/form/_normal.scss
@@ -32,7 +32,7 @@
           margin-bottom: 8px;
           font-size: 14px;
           display: block;
-          color: $steel;
+          color: $pale-white;
         }
 
         .form-control {
@@ -44,7 +44,7 @@
           height: 48px;
 
           &::placeholder {
-            color: $steel;
+            color: $pale-white;
           }
 
           &:focus {
