--- a/styles/globals/_tab.scss
+++ b/styles/globals/_tab.scss
@@ -12,7 +12,7 @@
     .nav-link {
       text-transform: capitalize;
       position: relative;
-      color: $bluey-grey;
+      color: $primary-600;
       margin-bottom: 0px;
       font-weight: 500;
       font-size: 18px;
