--- a/styles/globals/_reset.scss
+++ b/styles/globals/_reset.scss
@@ -1,9 +1,16 @@
+* {
+  box-sizing: border-box;
+}
+
+
 html,
 body {
   -webkit-font-smoothing: antialiased;
   font-family: $br-firma;
   font-size: 16px;
   width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 // full height
@@ -15,7 +22,12 @@ body,
 }
 
 a {
+  color: inherit;
+}
+
+a {
   color: $default;
+  text-decoration: none;
 }
 
 textarea:-webkit-autofill:hover textarea:-webkit-autofill:focus,
